
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint ;


 int CFLAG_8 (int) ;
 int DY ;
 int FLAG_C ;
 int FLAG_N ;
 int FLAG_V ;
 int FLAG_X ;
 int FLAG_Z ;
 void* MASK_OUT_ABOVE_8 (int) ;
 int MASK_OUT_BELOW_8 (int) ;
 int NFLAG_8 (int) ;
 int REG_IR ;
 int VFLAG_SUB_8 (int,int,int) ;

void m68k_op_subq_8_d(void)
{
 uint* r_dst = &DY;
 uint src = (((REG_IR >> 9) - 1) & 7) + 1;
 uint dst = MASK_OUT_ABOVE_8(*r_dst);
 uint res = dst - src;

 FLAG_N = NFLAG_8(res);
 FLAG_Z = MASK_OUT_ABOVE_8(res);
 FLAG_X = FLAG_C = CFLAG_8(res);
 FLAG_V = VFLAG_SUB_8(src, dst, res);

 *r_dst = MASK_OUT_BELOW_8(*r_dst) | FLAG_Z;
}
