; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_subq_8_d.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_subq_8_d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DY = common dso_local global i32 0, align 4
@REG_IR = common dso_local global i32 0, align 4
@FLAG_N = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i32 0, align 4
@FLAG_C = common dso_local global i32 0, align 4
@FLAG_X = common dso_local global i32 0, align 4
@FLAG_V = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_subq_8_d() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* @DY, i32** %1, align 8
  %5 = load i32, i32* @REG_IR, align 4
  %6 = ashr i32 %5, 9
  %7 = sub nsw i32 %6, 1
  %8 = and i32 %7, 7
  %9 = add nsw i32 %8, 1
  store i32 %9, i32* %2, align 4
  %10 = load i32*, i32** %1, align 8
  %11 = load i32, i32* %10, align 4
  %12 = call i8* @MASK_OUT_ABOVE_8(i32 %11)
  %13 = ptrtoint i8* %12 to i32
  store i32 %13, i32* %3, align 4
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* %2, align 4
  %16 = sub nsw i32 %14, %15
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @NFLAG_8(i32 %17)
  store i32 %18, i32* @FLAG_N, align 4
  %19 = load i32, i32* %4, align 4
  %20 = call i8* @MASK_OUT_ABOVE_8(i32 %19)
  %21 = ptrtoint i8* %20 to i32
  store i32 %21, i32* @FLAG_Z, align 4
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @CFLAG_8(i32 %22)
  store i32 %23, i32* @FLAG_C, align 4
  store i32 %23, i32* @FLAG_X, align 4
  %24 = load i32, i32* %2, align 4
  %25 = load i32, i32* %3, align 4
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @VFLAG_SUB_8(i32 %24, i32 %25, i32 %26)
  store i32 %27, i32* @FLAG_V, align 4
  %28 = load i32*, i32** %1, align 8
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @MASK_OUT_BELOW_8(i32 %29)
  %31 = load i32, i32* @FLAG_Z, align 4
  %32 = or i32 %30, %31
  %33 = load i32*, i32** %1, align 8
  store i32 %32, i32* %33, align 4
  ret void
}

declare dso_local i8* @MASK_OUT_ABOVE_8(i32) #1

declare dso_local i32 @NFLAG_8(i32) #1

declare dso_local i32 @CFLAG_8(i32) #1

declare dso_local i32 @VFLAG_SUB_8(i32, i32, i32) #1

declare dso_local i32 @MASK_OUT_BELOW_8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
